--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "expose-loader": "^0.7.5",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "source-map-support": "^0.5.3",
