--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,12 @@
 {
   "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "jquery": true,
+    "node": true
+  },
   "extends": [
     "standard"
   ],
