--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "expose-loader": "^0.7.5",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
@@ -39,14 +40,13 @@
     "sass-loader": "^7.0.3",
     "source-map-support": "^0.5.3",
     "style-loader": "^0.21.0",
+    "toastr": "^2.1.4",
     "truffle": "^4.1.13",
     "truffle-contract": "^3.0.6",
     "web3": "^0.20.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
-    "webpack-dev-server": "^3.1.4",
-    "toastr": "^2.1.4"
+    "webpack-dev-server": "^3.1.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
